--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="Resources/Apache PDFBox/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="Resources/Apache PDFBox/fontbox-2.0.26.jar"/>
+	<classpathentry kind="lib" path="Resources/Apache PDFBox/pdfbox-2.0.26.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
